--- a/appnproylogico/templates/asignaciones/editar-asignacion-mf.html
+++ b/appnproylogico/templates/asignaciones/editar-asignacion-mf.html
@@ -15,9 +15,9 @@
       <div class="d-flex gap-2">
         
         {% if asignacion %}
-        <a class="btn btn-outline-secondary btn-pill" href="{% url 'detalle_asignacion_mf' asignacion.id %}"><i class="bi bi-arrow-left"></i> Volver</a>
+        <a class="btn btn-secondary btn-pill" href="{% url 'detalle_asignacion_mf' asignacion.id %}" aria-label="Volver al detalle"><i class="bi bi-arrow-left"></i> Volver</a>
         {% else %}
-        <a class="btn btn-outline-secondary btn-pill" href="{% url 'listado_asignaciones_mf' %}"><i class="bi bi-arrow-left"></i> Volver</a>
+        <a class="btn btn-secondary btn-pill" href="{% url 'listado_asignaciones_mf' %}" aria-label="Volver al listado"><i class="bi bi-arrow-left"></i> Volver</a>
         {% endif %}
       </div>
     </div>
@@ -36,9 +36,9 @@
           </div>
           <div class="d-flex justify-content-end gap-2 mt-3">
             {% if asignacion %}
-            <a class="btn btn-outline-secondary" href="{% url 'detalle_asignacion_mf' asignacion.id %}">Cancelar</a>
+            <a class="btn btn-secondary" href="{% url 'detalle_asignacion_mf' asignacion.id %}">Cancelar</a>
             {% else %}
-            <a class="btn btn-outline-secondary" href="{% url 'listado_asignaciones_mf' %}">Cancelar</a>
+            <a class="btn btn-secondary" href="{% url 'listado_asignaciones_mf' %}">Cancelar</a>
             {% endif %}
             <button class="btn btn-success" type="submit"><i class="bi bi-check-lg"></i> Guardar cambios</button>
           </div>
